# Market_Parser

./: .gitignore  CMakeLists.txt  README.md
data/: market_data.csv  market_data_test.csv
include/: BenchMark.hpp  DataParser.hpp  Logger.hpp  MarketDataClient.hpp  MarketDataServer.hpp
src/: BenchMark.cpp  DataParser.cpp  Logger.cpp  MarketDataClient.cpp  MarketDataServer.cpp  main.cpp
test/: CMakeLists.txt  TestMarketDataClient.cpp  TestMarketDataServer.cpp
